test/fixtures/invalid/invalid-oneof.raml
#%RAML 0.8
---
baseUri: foo
title: foo
version: foo
schemas:
  - foo: !include schemas/foo/item.json
/foo:
  displayName: foo
  /{foo_id}:
    post:
      displayName: foo
      responses:
        201:
          body:
            application/json:
              schema: !include schemas/foo/item.json
